--- a/src/main/templates/index.html
+++ b/src/main/templates/index.html
@@ -7,9 +7,8 @@
     <title>Example App</title>
 </head>
 <body>
-<h4>v${project.parent.version}</h4>
+<h4>v${project.version}</h4>
 <div id="app" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.5.0/bluebird.min.js"></script>
 <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
